Attempt fix for scroll delay on ios

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,10 @@
     -webkit-tap-highlight-color: transparent;
   }
 }
+
+/* Without this, the sidebar doesn't scroll until the unterlying editor has stopped its inertia :( */
+@layer utilities {
+  .fix-z-index {
+    -webkit-transform: translate3d(0, 0, 0);
+  }
+}
